[gd_scene load_steps=9 format=3 uid="uid://cs37od8pvmana"]

[ext_resource type="PackedScene" uid="uid://ygb685faf1ri" path="res://player.tscn" id="1_86i6p"]
[ext_resource type="Script" path="res://main.gd" id="1_hym0k"]
[ext_resource type="PackedScene" uid="uid://di6m4spfbus2u" path="res://mob.tscn" id="2_dcvo1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vac75"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_1eqr7"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_76j7p"]
albedo_color = Color(0.968627, 0.545098, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_fho2v"]
material = SubResource("StandardMaterial3D_76j7p")

[sub_resource type="Curve3D" id="Curve3D_mn8hy"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -55.8217, 0, -46.1575, 0, 0, 0, 0, 0, 0, 55.8217, 0, -46.5902, 0, 0, 0, 0, 0, 0, 56.5429, 0, 40.2436, 0, 0, 0, 0, 0, 0, -55.8217, 0, 40.6763, 0, 0, 0, 0, 0, 0, -55.8217, 0, -46.1575, 0, 0, 0, 0, 0, 0, 0.0323334, 0.727503, -46.1575),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_hym0k")
enemy_scene = ExtResource("2_dcvo1")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_vac75")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_1eqr7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.398909, 0.91699, 0, -0.91699, 0.398909, 0, 16.6807, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_86i6p")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -56, 0, -47)
mesh = SubResource("CylinderMesh_fho2v")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -56, 0, 40)
mesh = SubResource("CylinderMesh_fho2v")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 56, 0, -47)
mesh = SubResource("CylinderMesh_fho2v")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 56, 0, 40)
mesh = SubResource("CylinderMesh_fho2v")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_mn8hy")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -55.8217, 0, -46.1575)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
